fixing some overflow styling.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,3 +8,10 @@
 .App-link {
   color: #61dafb;
 }
+
+.Body-color {
+  background-color: #282c34;
+  min-height: 100vh;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
